# guishi

./: Cargo.toml  README.md
clib/: Makefile  compile_commands.json  main.c  rc4.c  rc4.h  uuid.c  uuid.h
src/: lib.rs  main.rs
src/config/: args.rs  structs.rs
