[package]
name = "guishi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
console = "0.15.7"
libaes = "0.7.0"
rand = "0.8.5"
rust-crypto="0.2.36"
hex="0.4.3"
[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
#aes = "0.9.2"
#rand = "0.8.6"
